# readback

./: .gitignore  README.md  requirement.md
.github/workflows/: ci.yml
api/: .env.example  Dockerfile  nixpacks.toml  pyproject.toml  railway.json  run.py
api/app/: config.py  db.py  main.py
api/app/extractors/: article.py  github.py  linkedin.py  router.py  youtube.py
api/app/notes/: generate.py  napkin.py
api/app/podcast/: generate.py  script.py  stitch.py  tts_elevenlabs.py  tts_openai.py
api/app/routes/: links.py  notes.py  podcasts.py
api/app/telegram/: handlers.py  webhook.py
api/app/video/: runway.py
api/app/worker/: pipeline.py
api/prompts/: notes_system.md  podcast_script_system.md
docs/: schema.sql
web/: middleware.ts  package.json  railway.json
web/app/: HomeClient.tsx  SignOutButton.tsx  globals.css  layout.tsx  page.tsx
web/app/api/links/: route.ts
web/app/api/links/[id]/: route.ts
web/app/api/links/[id]/regenerate/: route.ts
web/app/api/links/[id]/video/: route.ts
web/app/api/setup-auth/: route.ts
web/app/links/[id]/: CollapsibleNotes.tsx  Flashcards.tsx  LinkActions.tsx  Quiz.tsx  TweetThread.tsx  VideoGenerator.tsx  page.tsx
web/app/login/: page.tsx
web/app/search/: page.tsx
web/public/: manifest.json
