[project]
name = "readback-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "supabase>=2.5.0",
    "python-telegram-bot>=21.0",
    "anthropic>=0.28.0",
    "pydantic-settings>=2.3.0",
    "trafilatura>=1.12.0",
    "youtube-transcript-api>=0.6.2",
    "yt-dlp>=2024.5.27",
    "pydub>=0.25.1",
    "httpx>=0.27.0",
    "readability-lxml>=0.8.1",
    "elevenlabs>=1.2.0",
    "openai>=1.35.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["E", "F", "I"]
